--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Austrian poetry -- 20th century'
+- GITenberg
 title: 'Die Dichtungen von Georg Trakl
 
   Erste Gesamtausgabe'
